# MLOps_catsvsdogs

./: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  config.yaml  data.dvc  diagram.drawio  models.dvc  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: api-tests.yaml  codecheck.yaml  locust.yaml  pre_commit.yaml  tests.yaml
configs/: config.yaml  data_config.yaml  evaluate_config.yaml  model_config.yaml  training_config.yaml
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.html
reports/figures/: Diagram.drawio
src/catsvsdogs/: api.py  data.py  evaluate.py  frontend.py  model.py  train.py
src/catsvsdogs/baseline/: model.py  train.py
tests/: test_data.py  test_model.py  test_train.py
tests/integration_tests/: test_apis.py
tests/performance_test/: locust.py
