[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "catsvsdogs"
version = "0.0.1"
description = "A project to classify pictures of cats and dogs and deepen our knowledge in MLOps."
authors = [{ name = "group 50", email = "your@email.com" }]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ['requirements_dev.txt'] }

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
omit = ["tests/*"]
